@@ -10,6 +10,7 @@ assocTestMM <- function(genoData,
                         verbose = TRUE){
 
     if(class(genoData) == "SeqVarData"){
+        message("Consider using assocTestSingle instead.")
         # save the filter
         seqFilt.original <- seqGetFilter(genoData)
         # reset so indexing works
