@@ -1,0 +1,20 @@
+\name{GENESIS-deprecated}
+\alias{GENESIS-deprecated}
+\title{Deprecated functions in package \pkg{GENESIS}}
+
+\description{
+  These functions are provided for compatibility with older versions
+  of \pkg{GENESIS} only, and will be defunct at the next release.
+}
+
+\details{
+
+  The following functions are deprecated and will be made defunct; use
+  the replacement indicated below:
+  \itemize{
+
+    \item{assocTestSeq: \code{\link{assocTestAggregate}}}
+    \item{assocTestSeqWindow: \code{\link{assocTestAggregate}}}
+
+  }
+}
